--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,12 @@
 ---
-- hosts: all
-  become: yes
-  become_user: root
+- hosts: localhost
+  connection: local
 
   tasks:
 
   - name: Essential dev tools
     dnf: name={{ item }} state=installed
+    become: true
     with_items:
       - vim
       - tmux
@@ -15,9 +15,52 @@
       - zsh
       - zeal
       - the_silver_searcher
+      - fzf
+      - libvirt
+      - qemu
+      - cloc
+      - jq
+      - virt-manager
+      - java-1.8.0-openjdk-devel
+      - docker
+      - chromium
+      - snapd
+
+  - name: Docker group
+    group:
+      name: docker
+      state: present
+    become: true
+
+  - name: Add user to Docker group
+    user:
+      name: "{{ user }}"
+      groups: docker
+    become: true
+
+  - name: Vagrant
+    dnf: name=https://releases.hashicorp.com/vagrant/2.0.1/vagrant_2.0.1_x86_64.rpm state=present
+    become: true
+
+  - name: Virtualbox
+    dnf: name=http://download.virtualbox.org/virtualbox/5.2.4/VirtualBox-5.2-5.2.4_119785_fedora26-1.x86_64.rpm state=present
+    become: true
+
+  - name: Packer
+    unarchive:
+      src: https://releases.hashicorp.com/packer/1.1.3/packer_1.1.3_linux_amd64.zip
+      dest: /opt
+      creates: /opt/packer
+      remote_src: True
+    become: true
+
+  - name: vscode
+    dnf: name=https://packages.microsoft.com/yumrepos/vscode/code-1.19.1-1513676713.el7.x86_64.rpm state=present
+    become: true
 
   - name: Utils
     dnf: name={{ item }} state=installed
+    become: true
     with_items:
       - tree
       - moreutils
@@ -27,6 +70,7 @@
 
   - name: Debugging/Tracing tools
     dnf: name={{ item }} state=installed
+    become: true
     with_items:
       - htop
       - tcpdump
@@ -45,78 +89,40 @@
 
   - name: InfoSec
     dnf: name={{ item }} state=installed
+    become: true
     with_items:
       - nmap
 
   - name: Python tools requirements
     dnf: name={{ item }} state=installed
+    become: true
     with_items:
-      - python-devel
+      - gcc
       - redhat-rpm-config
+      - libffi-devel
+      - openssl-devel
+      - python-devel
       - libxml2-devel
       - libxml-devel
       - libxslt-devel
-
-  - name: Vagrant
-    dnf:
-      name: 'https://releases.hashicorp.com/vagrant/1.9.4/vagrant_1.9.4_x86_64.rpm'
-      state: present
-
-  - name: Terraform
-    unarchive:
-      src: 'https://releases.hashicorp.com/terraform/0.9.4/terraform_0.9.4_linux_amd64.zip'
-      dest: /opt
-      creates: /opt/terraform
-      remote_src: True
-
-  - name: Packer
-    unarchive:
-      src: 'https://releases.hashicorp.com/packer/1.0.0/packer_1.0.0_linux_amd64.zip'
-      dest: /opt
-      creates: /opt/packer
-      remote_src: True
-
-  - name: Python tools
-    pip: name={{ item }} state=present
-    with_items:
-      - mitmproxy
-      - sshuttle
-      - icdiff
-      - httpie
-      - docker-compose
-
-  - name: Ansible development
-    pip: name={{ item }} state=present
-    with_items:
-      - ansible
-      - ansible-lint
-      - molecule
-      - docker
-      - python-vagrant
-      - pytest
-      - pylint
-      - autopep8
+      - libselinux-python
+      - python3-pip
+      - python3-devel
 
   - name: Tmux plugin manager (tpm)
     git:
       repo: https://github.com/tmux-plugins/tpm
       dest: "{{ home }}/.tmux/plugins/tpm"
-    become: yes
-    become_user: "{{ user }}"
 
   - name: Tmux config
     copy:
       src: "{{ home }}/environment/tmux.conf"
       dest: "{{ home }}/.tmux.conf"
-      owner: "{{ user }}"
-      group: "{{ user }}"
 
   - name: Pathogen dir
     file:
       path: "{{ item }}"
       state: directory
-      owner: "{{ user }}"
-      group: "{{ user }}"
     with_items:
       - "{{ home }}/.vim/autoload"
       - "{{ home }}/.vim/bundle"
@@ -125,21 +131,16 @@
     get_url:
       url: https://tpo.pe/pathogen.vim
       dest: "{{ home}}/.vim/autoload/pathogen.vim"
-    become: yes
-    become_user: "{{ user }}"
 
   - name: vim config
     copy:
       src: "{{ home }}/environment/vimrc"
       dest: "{{ home }}/.vimrc"
-      owner: "{{ user }}"
 
   - name: Vim plugins
     git:
       repo: "{{ item }}"
       dest: "{{ home }}/.vim/bundle/{{ item | basename }}"
-    become: yes
-    become_user: "{{ user }}"
     with_items:
       - https://github.com/vim-airline/vim-airline
       - https://github.com/scrooloose/nerdtree
@@ -159,31 +160,28 @@
     template:
       src: "{{ home }}/environment/gitconfig.j2"
       dest: "{{ home }}/.gitconfig"
-      owner: "{{ user }}"
-      group: "{{ user }}"
 
-  - name: VirtualBox key
-    rpm_key:
-      key: https://www.virtualbox.org/download/oracle_vbox.asc
-      state: present
+  - name: Python tools
+    pip: name={{ item }} state=present
+    become: true
+    with_items:
+      - lxml
+      - sshuttle
+      - icdiff
+      - httpie
+      - ansible-lint
+      - molecule
+      - docker
+      - python-vagrant
+      - pylint
+      - autopep8
+      - tox
 
-  - name: VirtualBox repo
-    get_url:
-      url: http://download.virtualbox.org/virtualbox/rpm/fedora/virtualbox.repo
-      dest: /etc/yum.repos.d/virtualbox.repo
+  - name: mitmproxy
+    pip: name=mitmproxy state=present extra_args=--user executable=pip3
 
-  - name: VirtualBox package
-    dnf: name=VirtualBox-5.1 state=installed
-
-  - name: Docker CE repo
-    get_url:
-      url: https://download.docker.com/linux/fedora/docker-ce.repo
-      dest: /etc/yum.repos.d/docker-ce.repo
-
-  - name: Docker CE package
-    dnf: name=docker-ce state=installed
-
-  - name: Add user to Docker group
-    user:
-      name: "{{ user }}"
-      groups: docker
+  - name: Ansible development
+    pip: name={{ item }} state=present extra_args=--user
+    with_items:
+      - pytest
+      - virtualenvwrapper
